--- a/index.html
+++ b/index.html
@@ -25,5 +25,5 @@ I'm learning Front end Development <img src="https://media.giphy.com/media/WUlpl
 - :telescope: I’m learning to work as a Software Engineer and contributing to frontend and backend for building web applications.
 - :seedling: Exploring Technical Content Writing.
 - :zap: In my free time, I solve problems on GeeksforGeeks and read tech articles.
-  <a href="www.linkedin.com/in/tarafoncica-marie-sustiguer-a01964273
+  <a href="www.linkedin.com/in/tarafoncica-marie-sustiguer-a01964273/>
 - :mailbox:How to reach me: [![Linkedin Badge]
