--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <div id="header" align="center">
   <img src="https://media.giphy.com/media/M9gbBd9nbDrOTu1Mqx/giphy.gif" width="100"/>
 </div>
+
 <div id="badges" align="center">
-  <a href="www.linkedin.com/in/tarafoncica-marie-sustiguer-a01964273/>
+  <a href="https://www.linkedin.com/in/tarafoncica-marie-sustiguer-a01964273/">
     <img src="https://img.shields.io/badge/Linkedin-blue" alt="LinkedIn Badge"/>
   </a>
   <a href="your-youtube-URL">
@@ -12,18 +13,27 @@
     <img src="https://img.shields.io/badge/Facebook-blue" alt="Facebook Badge"/>
   </a>
 </div>
+
 <h1 align="center">
   hey there
   <img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="30px"/>
 </h1>
+
 <div align="center">
   <img src="https://media.giphy.com/media/dWesBcTLavkZuG35MI/giphy.gif" width="600" height="300"/>
 </div>
+
 <br>
+
 :woman_technologist: About Me:
-I'm learning Front end Development <img src="https://media.giphy.com/media/WUlplcMpOCEmTGBtBW/giphy.gif" width="30"> from Egypt.
+I'm learning Front end Development 
+<img src="https://media.giphy.com/media/WUlplcMpOCEmTGBtBW/giphy.gif" width="30"> from Egypt.
+
 - :telescope: I’m learning to work as a Software Engineer and contributing to frontend and backend for building web applications.
 - :seedling: Exploring Technical Content Writing.
 - :zap: In my free time, I solve problems on GeeksforGeeks and read tech articles.
-  <a href="www.linkedin.com/in/tarafoncica-marie-sustiguer-a01964273/>
-- :mailbox:How to reach me: [![Linkedin Badge]
+
+- :mailbox: How to reach me:  
+  <a href="https://www.linkedin.com/in/tarafoncica-marie-sustiguer-a01964273/">
+    <img src="https://img.shields.io/badge/Linkedin-blue" alt="LinkedIn Badge"/>
+  </a>
